example/hpa-example-decom.yaml
#Removed from 1.13
#kubectl autoscale -n kubeguide rc hpa-example --min=1 --max=10 --cpu-percent=80
#kubectl -n kubeguide get hpa
---
apiVersion: v1
kind: Service
metadata:
  name: hpa-example
spec:
  ports:
    - port: 80
  selector:
    app: hpa-example
