example/redis-guestbook.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: kubeguide
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: kubeguide/guestbook-php-frontend
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: kubeguide
  labels:
    name: frontend
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: frontend
  sessionAffinity: None
