example/redis-slave.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-slave
  namespace: kubeguide
  labels:
    name: redis-slave
spec:
  replicas: 2
  selector:
    matchLabels:
      name: redis-slave
  template:
    metadata:
      labels:
        name: redis-slave
    spec:
      containers:
        - name: slave
          image: kubeguide/guestbook-redis-slave
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
  namespace: kubeguide
  labels:
    name: redis-slave
spec:
  ports:
    - port: 6379
  selector:
    name: redis-slave
