example/ingress2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kubeguide
  name: nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: tomcat
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  namespace: kubeguide
  name: nginx
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30002
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: kubeguide
  name: ingress-nginx
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: nginx.kube.com
    http:
      paths:
      - path: /test
        backend:
          serviceName: nginx
          servicePort: 80
